<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">N-Puzzle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_moves">Total Moves</string>
    <string name="reset_button">Reset</string>
    <string name="status">Status</string>
    <string name="description">description</string>
    <string name="path">path</string>
    <string name="total_games">Total Games</string>
    <string name="total_games_own">Games Own</string>
    <string name="average_moves">Average Moves</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_start_game">Game</string>
    <string name="title_user_information">Profile</string>
    <string name="title_select_image">Choose Image</string>
    <string name="title_stats">Statistics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_image">Choose Image</string>

</resources>