<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.n_puzzle.Records" >

    <!-- TODO: Update blank fragment layout -->

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/total_games"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/total_games" />

        <TextView
            android:id="@+id/total_games_count"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text=""
            android:textColor="#000000" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/total_games_own"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/total_games_own" />

        <TextView
            android:id="@+id/total_games_own_count"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text=""
            android:textColor="#000000" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/average"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/average_moves" />

        <TextView
            android:id="@+id/average_moves_value"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text=""
            android:textColor="#000000" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </TableRow>

</TableLayout>