<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <TableRow
            android:id="@+id/fragmentRow"
            android:layout_margin="5dp"
            android:background="@color/WhiteSmoke"
            android:padding="5dp" >

            <TextView
                android:id="@+id/total_moves"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/total_moves" />

            <TextView
                android:id="@+id/count2"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text=""
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:id="@+id/fragmentRow2"
            android:layout_margin="5dp"
            android:background="@color/WhiteSmoke"
            android:padding="5dp" >

            <TextView
                android:id="@+id/fresult_label"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/status" />

            <TextView
                android:id="@+id/result_label2"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@color/WhiteSmoke"
                android:gravity="right|center_vertical"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/fragmentRow3"
            android:layout_margin="5dp"
            android:padding="5dp" >

            <Button
                android:id="@+id/reset2"
                style="@style/ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:background="@drawable/gradient_button"
                android:gravity="center"
                android:text="@string/reset_button" >
            </Button>
        </TableRow>
    </TableLayout>

    <GridView
        android:id="@+id/board2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

</LinearLayout>